[gd_scene load_steps=5 format=3 uid="uid://bcmamurh28kwc"]

[ext_resource type="Script" path="res://Cards/Card/Card.gd" id="1_3b2eq"]
[ext_resource type="Texture2D" uid="uid://p2ehkymqsd7w" path="res://Art/Sprites/Backing/BrownCardBase.png" id="2_xwwa5"]
[ext_resource type="Texture2D" uid="uid://bejf473340knn" path="res://Art/Sprites/Icons/frendzi.png" id="3_57um5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ml4c"]
size = Vector2(150, 199)

[node name="Card" type="StaticBody2D"]
script = ExtResource("1_3b2eq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8ml4c")

[node name="MeshInstance2D" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -99.0
offset_right = 74.0
offset_bottom = 101.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.388235, 0.2, 1, 1)

[node name="BrownCardBase" type="Sprite2D" parent="."]
position = Vector2(-0.499998, 0.499995)
scale = Vector2(3.14583, 3.14062)
texture = ExtResource("2_xwwa5")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -34)
scale = Vector2(1.90909, 1.84091)
texture = ExtResource("3_57um5")

[node name="Details" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = 26.0
offset_right = 50.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 10
scroll_active = false

[node name="CardLabel" type="RichTextLabel" parent="."]
offset_left = -59.0
offset_top = -97.0
offset_right = 59.0
offset_bottom = -72.0
text = "Randomize me"
scroll_active = false
autowrap_mode = 0

[connection signal="gui_input" from="MeshInstance2D" to="." method="_on_mesh_instance_2d_gui_input"]
[connection signal="mouse_entered" from="MeshInstance2D" to="." method="_on_mesh_instance_2d_mouse_entered"]
[connection signal="mouse_exited" from="MeshInstance2D" to="." method="_on_mesh_instance_2d_mouse_exited"]
